<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:scaleType="centerCrop"
            android:src="@drawable/book_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:background="@drawable/details_page_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dim24"
                android:layout_marginHorizontal="@dimen/more_large_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/auther_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/more_large_margin"
                android:text="@string/auther_name"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_name" />

            <TextView
                android:id="@+id/label_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/more_large_margin"
                android:text="About the book"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currency_value" />

            <TextView
                android:id="@+id/currency_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/more_large_margin"
                android:text="@string/_0_00"
                android:textColor="@color/black"
                android:textSize="@dimen/more_large_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auther_name" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/more_large_margin"
                android:text="@string/description_text"
                android:textSize="@dimen/medum_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/dim24"
                android:background="@drawable/button_background"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/more_large_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>